# shelf-aware

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  render.yaml  requirements.txt
cli/: backfill_archetype_taglines.py  compute_comparison.py  compute_stats.py  enrich_books.py  fetch_goodreads.py  init_db.py  migrate_rating_labels.py  store_results.py
server/: database.py  main.py
server/routers/: comparisons.py  profiles.py
server/static/css/: style.css
server/static/js/: charts.js
server/templates/: admin.html  base.html  compare.html  home.html  profile.html
