[project]
name = "shelf-aware"
version = "0.1.0"
description = "Analyze your Goodreads reading history"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
